# fvm

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  compile_commands.json  fvm.srctrlprj  todo.md  vcpkg-configuration.json  vcpkg.json
examples/sandbox/: CMakeLists.txt  CMakePresets.json
examples/sandbox/src/: main.cpp  project_manifest.json
examples/sandbox/src/scenes/: prologue.cpp  prologue.hpp
src/: main.cpp
src/astralix/src/modules/application/: CMakeLists.txt  application.cpp  application.hpp  time.cpp  time.hpp
src/astralix/src/modules/editor/: CMakeLists.txt  camera.cpp  camera.hpp  editor.cpp  editor.hpp  websocket-server.hpp
src/astralix/src/modules/engine/: CMakeLists.txt  engine.cpp  engine.hpp  render-configuration.hpp
src/astralix/src/modules/physics/: CMakeLists.txt
src/astralix/src/modules/project/: CMakeLists.txt  project.cpp  project.hpp
src/astralix/src/modules/renderer/: CMakeLists.txt  framebuffer.cpp  framebuffer.hpp  index-buffer.hpp  renderer-api.cpp  renderer-api.hpp  renderer.hpp  uniform.cpp  uniform.hpp  vertex-array.cpp  vertex-buffer.cpp  vertex-buffer.hpp  websocket-server.cpp  websocket-server.hpp
src/astralix/src/modules/streams/: CMakeLists.txt  context-proxy.cpp  context-proxy.hpp  serialization-context.cpp  serialization-context.hpp  serializer.cpp  stream-buffer.hpp
src/astralix/src/modules/window/: CMakeLists.txt  time.cpp  time.hpp  window.cpp  window.hpp
src/astralix/src/shared/: CMakeLists.txt  assert.hpp  base-manager.cpp  base-manager.hpp  base.hpp  either.hpp  listener.hpp  log.hpp  serializer.cpp  serializer.hpp  trace.hpp
src/astralix/src/shared/allocators/: CMakeLists.txt
src/astralix/src/shared/ecs/: CMakeLists.txt  guid.cpp  guid.hpp
src/astralix/src/shared/events/: CMakeLists.txt  event-dispatcher.hpp  event-scheduler.cpp  event-scheduler.hpp  event.hpp  listener.hpp
src/astralix/src/shared/exceptions/: base-exception.cpp  base-exception.hpp
src/astralix/src/shared/foundation/: CMakeLists.txt  base-manager.hpp  base.hpp  log.hpp  trace.hpp
src/game/: CMakeLists.txt  game.cpp  game.hpp  player.hpp
src/game/components/: player-controller-component.hpp
src/game/scenes/: prologue.cpp  prologue.hpp
src/modules/application/: CMakeLists.txt  application.cpp  application.hpp
src/modules/engine/: CMakeLists.txt  engine.cpp
src/modules/game/: CMakeLists.txt  game.cpp  game.hpp  player.cpp  player.hpp  scene-system.cpp  scene-system.hpp  scene.hpp
src/modules/game/scenes/: prologue.cpp  prologue.hpp
src/modules/renderer/: CMakeLists.txt  camera.cpp  camera.hpp  framebuffer.cpp  framebuffer.hpp  index-buffer.cpp  object-renderer.cpp  object-renderer.hpp  object.cpp  object.hpp  renderer-api.cpp  renderer-api.hpp  renderer.hpp  shader-renderer.cpp  shader-renderer.hpp  shader.cpp  shader.hpp  storage-buffer.cpp  storage-buffer.hpp  texture-renderer.cpp  texture-renderer.hpp  texture.cpp  texture.hpp  uniform.cpp  uniform.hpp  vertex-array.hpp  vertex-buffer.hpp
src/modules/renderer/components/: camera-component.cpp  camera-component.hpp  light-component.cpp  light-component.hpp  material-component.cpp  material-component.hpp  mesh-component.cpp  mesh-component.hpp  model-component.cpp  model-component.hpp  render-component.cpp  render-component.hpp  resource-component.cpp  resource-component.hpp  transform-component.cpp  transform-component.hpp
src/modules/renderer/components/base/: component.hpp  icomponent.hpp
src/modules/renderer/components/material/: material-component.cpp  material-component.hpp
src/modules/renderer/components/mesh/: mesh-component.cpp  mesh-component.hpp
src/modules/renderer/components/post-processing/: post-processing-component.cpp  post-processing-component.hpp
src/modules/renderer/components/resource/: resource-component.cpp  resource-component.hpp
src/modules/renderer/components/tag/: tag-component.cpp  tag-component.hpp
src/modules/renderer/components/transform/: transform-component.cpp  transform-component.hpp
src/modules/renderer/entities/: camera.hpp  layer.hpp  object.cpp  object.hpp  skybox.hpp
src/modules/renderer/entities/base/: entity.hpp  ientity.hpp
src/modules/renderer/layers/: background-layer.hpp  object-list-layer.cpp  object-list-layer.hpp
src/modules/renderer/managers/: component-manager.cpp  component-manager.hpp  entity-manager.cpp  entity-manager.hpp  layer-manager.cpp  layer-manager.hpp  resource-manager.cpp  resource-manager.hpp  scene-manager.hpp  system-manager.cpp  system-manager.hpp
src/modules/renderer/platform/OpenGL/: opengl-framebuffer.cpp  opengl-shader.cpp  opengl-shader.hpp  opengl-storage-buffer.cpp  opengl-texture2D.cpp  opengl-texture3D.cpp  (+4 more)
src/modules/renderer/resources/: font.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  resource.hpp  shader-renderer.cpp  shader-renderer.hpp  shader.cpp  shader.hpp  texture-renderer.cpp  texture-renderer.hpp  texture.cpp  texture.hpp
src/modules/renderer/systems/: layer-system.cpp  layer-system.hpp  render-system.cpp  render-system.hpp  scene-system.cpp
src/modules/renderer/utils/: guid.cpp  guid.hpp
src/modules/streams/: CMakeLists.txt  context-proxy.cpp  context-proxy.hpp  serialization-context.cpp  serialization-context.hpp  serializer.cpp  serializer.hpp  stream-buffer.hpp  stream-reader.hpp  stream-writer.hpp
src/modules/window/: CMakeLists.txt  window.cpp  window.hpp
src/modules/window/events/: key-codes.hpp  key-event.cpp  key-event.hpp  keyboard.cpp  keyboard.hpp  mouse-event.cpp  mouse-event.hpp  mouse.cpp
src/modules/window/layers/: background-layer.hpp
src/shared/allocators/: CMakeLists.txt  arena.cpp  arena.hpp  arena.test.cpp
src/shared/ecs/: CMakeLists.txt  guid.hpp
src/shared/ecs/entities/: entity.hpp  ientity.hpp
src/shared/ecs/managers/: component-manager.hpp  entity-manager.cpp  entity-manager.hpp
src/shared/ecs/systems/: isystem.hpp
src/shared/events/: CMakeLists.txt  event-dispatcher.hpp  event-scheduler.hpp  listener.hpp
src/shared/foundation/: CMakeLists.txt  assert.hpp
(+440 files in other folders)
